aria2: Remove lowest speed limit

--- a/aria2/etc/aria2.conf
+++ b/aria2/etc/aria2.conf
@@ -9,7 +9,7 @@ file-allocation=falloc
 max-connection-per-server=16
 max-concurrent-downloads=4
 max-tries=0
-lowest-speed-limit=10K
+#lowest-speed-limit=10K
 min-split-size=1M
 split=10240
 
