pacman: Add ParallelDownloads

--- a/pacman/etc/pacman.conf
+++ b/pacman/etc/pacman.conf
@@ -22,7 +22,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-#IgnorePkg   =
+#IgnorePkg   = haskell-* xmobar xmonad xmonad-contrib
 #IgnoreGroup =
 
 #NoUpgrade   =
@@ -34,6 +34,7 @@ Color
 #TotalDownload
 CheckSpace
 # VerbosePkgLists
+ParallelDownloads = 4
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
