picom: Remove unused config

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -34,7 +34,20 @@ blur-background-exclude = [
 	"window_type = 'desktop'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
-# opacity-rule = [ "80:class_g = 'URxvt'" ];
+
+# Opacity
+#
+opacity-rule = [
+	# "90:class_g = 'st-256color' && focused",
+	# "75:class_g = 'st-256color' && !focused",
+
+	# "85:class_g = 'dmenu'",
+
+	# "95:class_g = 'Code'",
+	# "90:class_g = 'Sublime_text'",
+	# "90:class_g = 'st-256color'",
+	# "90:class_g = 'Thunar'",
+];
 
 # Fading
 fading = true;
@@ -99,24 +112,8 @@ wintypes:
 	}
 };
 
-##
-##
 
-opacity-rule = [
-	# "90:class_g = 'st-256color' && focused",
-	# "75:class_g = 'st-256color' && !focused",
-
-	"85:class_g = 'dmenu'",
-
-	"95:class_g = 'Code'",
-	"90:class_g = 'Sublime_text'",
-	"90:class_g = 'st-256color'",
-	"90:class_g = 'Thunar'",
-	"85:class_g = 'URxvt'",
-
-	"90:class_g = 'tabbed'"
-];
-
-# New
+## New
+#
 
 use-damage = true; # glx-swap-method = "undefined";
