--- a/pacman/etc/pacman.conf
+++ b/pacman/etc/pacman.conf
@@ -22,7 +22,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-#IgnorePkg   = haskell-* xmobar xmonad xmonad-contrib
+IgnorePkg   = burpsuite google-chrome megacmd xmobar xmonad xmonad-contrib
 #IgnoreGroup =
 
 #NoUpgrade   =
