--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -38,15 +38,17 @@ blur-background-exclude = [
 # Opacity
 #
 opacity-rule = [
-	# "90:class_g = 'st-256color' && focused",
-	# "75:class_g = 'st-256color' && !focused",
+	# "90:class_g = 'Alacritty' && focused",
+	# "75:class_g = 'Alacritty' && !focused",
 
-	# "85:class_g = 'dmenu'",
+	"90:class_g = 'Alacritty'",
 
-	# "95:class_g = 'Code'",
-	# "90:class_g = 'Sublime_text'",
-	# "90:class_g = 'st-256color'",
-	# "90:class_g = 'Thunar'",
+	"95:class_g = 'Rofi'",
+
+	"85:class_g = 'Code'",
+	"85:class_g = 'Subl'",
+	"85:class_g = 'Thunar'",
+	"85:class_g = 'TelegramDesktop'",
 ];
 
 # Fading
@@ -65,7 +67,6 @@ mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
 vsync = false;
 dbe = false;
 # sw-opti = true;
