--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -70,4 +70,5 @@ screenshot-template="%f-%wH.%wM.%wS.%wT-#%#00n"
 # hwdec=dxva2-copy
 
 # YouTube DL
+ytdl=yes
 ytdl-format="bestvideo[height<=?720][fps<=?30][vcodec=?vp9]+bestaudio/best[height<=720]"
