--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -38,15 +38,18 @@ blur-background-exclude = [
 # Opacity
 #
 opacity-rule = [
-	# "90:class_g = 'Alacritty' && focused",
-	# "75:class_g = 'Alacritty' && !focused",
+	"100:class_g = 'TelegramDesktop' && name = 'Media viewer'",
+
+	#"90:class_g = 'Alacritty' && focused",
+	#"75:class_g = 'Alacritty' && !focused",
 
 	"90:class_g = 'Alacritty'",
 
 	"95:class_g = 'Rofi'",
+	"95:class_g = 'jetbrains-studio'",
+	"95:class_g = 'code-oss'",
+	"95:class_g = 'Subl'",
 
-	"85:class_g = 'Code'",
-	"85:class_g = 'Subl'",
 	"85:class_g = 'Thunar'",
 	"85:class_g = 'TelegramDesktop'",
 ];
