mpv: Update config and remove unused scripts

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -17,9 +17,15 @@ demuxer-max-bytes=10485760
 demuxer-readahead-secs=59
 demuxer-mkv-subtitle-preroll=yes
 
+# Audio
+af=scaletempo2
+
 # Volume
 volume=100
 volume-max=250
+
+# Osc
+osc=yes
 
 # Osd
 osd-font-size=24
@@ -64,10 +70,10 @@ screenshot-jpeg-quality=100
 #screenshot-directory="%UserProfile%\Pictures\Screenshots"
 screenshot-template="%f-%wH.%wM.%wS.%wT-#%#00n"
 
-# # Shaders
-# profile=gpu-hq
-# gpu-api=opengl
-# hwdec=dxva2-copy
+# HW VA
+profile=gpu-hq
+gpu-api=opengl
+hwdec=dxva2-copy
 
 # YouTube DL
 ytdl=yes
