neofetch: Remove unused line

--- a/neofetch/.config/neofetch/config.conf
+++ b/neofetch/.config/neofetch/config.conf
@@ -5,6 +5,8 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
+    prin
+
     info title
     info underline
 
@@ -38,9 +40,7 @@ print_info() {
     # info "Install Date" install_date
     # info "Locale" locale  # This only works on glibc systems.
 
-    info line_break
     info cols
-    info line_break
 }
 
 
