root: pacman: Using /home to store db, pkg, and log files. Add more ignored packages. Change default SigLevel

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -10,35 +10,38 @@
 # The following paths are commented out with their default values listed.
 # If you wish to use different paths, uncomment and update the paths.
 #RootDir     = /
-#DBPath      = /var/lib/pacman/
-#CacheDir    = /var/cache/pacman/pkg/
-#LogFile     = /var/log/pacman.log
+DBPath       = /home/.pacman/lib
+CacheDir     = /home/.pacman/pkg
+LogFile      = /home/.pacman/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
 #HookDir     = /etc/pacman.d/hooks/
-HoldPkg     = pacman glibc
+HoldPkg      = pacman glibc
 #XferCommand = /usr/bin/curl -L -C - -f -o %o %u
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg   = burpsuite google-chrome megacmd xmobar xmonad xmonad-contrib
+IgnorePkg = linux-lts linux-lts-headers
+IgnorePkg = brave-bin firefox firefox-nightly google-chrome
+IgnorePkg = android-studio-canary code dbeaver docker go
+IgnorePkg = postgresql postgresql-libs
+IgnorePkg = burpsuite
 #IgnoreGroup =
 
-#NoUpgrade   =
-#NoExtract   =
+#NoUpgrade =
+#NoExtract =
 
 # Misc options
 #UseSyslog
 Color
-#TotalDownload
 CheckSpace
-# VerbosePkgLists
+VerbosePkgLists
 ParallelDownloads = 16
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
-SigLevel    = Required DatabaseOptional
+SigLevel = PackageRequired DatabaseOptional
 LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
 
@@ -73,18 +76,15 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [core]
-SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 [extra]
-SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 #[community-testing]
 #Include = /etc/pacman.d/mirrorlist
 
 [community]
-SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
