--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -22,6 +22,8 @@ SHIFT+RIGHT 	no-osd seek +2 exact
 SHIFT+LEFT  	no-osd seek -2 exact
 
 # Speed
+} 				add speed +0.50
+{ 				add speed -0.50
 ] 				add speed +0.05
 [ 				add speed -0.05
 
