pacman: Ignore ida-free and xdman

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -26,7 +26,7 @@ IgnorePkg = linux-lts linux-lts-headers
 IgnorePkg = brave-bin firefox firefox-nightly google-chrome
 IgnorePkg = android-studio-canary code dbeaver docker go
 IgnorePkg = postgresql postgresql-libs
-IgnorePkg = burpsuite
+IgnorePkg = burpsuite ida-free xdman
 #IgnoreGroup =
 
 #NoUpgrade =
