--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -24,7 +24,7 @@ Architecture = auto
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 IgnorePkg = linux-lts linux-lts-headers
 IgnorePkg = brave-bin firefox firefox-nightly google-chrome
-IgnorePkg = android-studio-canary code dbeaver docker go
+IgnorePkg = android-ndk android-studio-canary code dbeaver docker go
 IgnorePkg = postgresql postgresql-libs
 IgnorePkg = burpsuite ida-free xdman
 #IgnoreGroup =
