picom: Remove unused effect, improve transparent, etc

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -12,15 +12,17 @@ opacity-rule = [
 	#"90:class_g = 'Alacritty' && focused",
 	#"75:class_g = 'Alacritty' && !focused",
 
-	"90:class_g = 'Alacritty'",
+	"85:class_g = 'Alacritty'",
+	"85:class_g = 'scratchpad'",
+	"85:class_g = 'scratchpad-gotop'",
 
 	"95:class_g = 'Rofi'",
 	"95:class_g = 'jetbrains-studio'",
 	"95:class_g = 'code-oss'",
 	"95:class_g = 'Subl'",
 
-	"85:class_g = 'Thunar'",
-	"85:class_g = 'TelegramDesktop'",
+	"95:class_g = 'Thunar'",
+	"95:class_g = 'TelegramDesktop'",
 ];
 
 
@@ -97,7 +99,7 @@ shadow-offset-y = -7;
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -193,18 +195,18 @@ blur-strength = 5
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-blur-background = true
+blur-background = false
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
 #    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-blur-background-frame = true
+blur-background-frame = false
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-blur-background-fixed = true
+blur-background-fixed = false
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -233,11 +235,11 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = "glx"
-backend = "xr_glx_hybrid";
+backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true;
+vsync = false;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -428,9 +430,9 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 1; }
+  dropdown_menu = { opacity = 1; }
 };
