root: pacman: Update ignored packages

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -22,11 +22,12 @@ HoldPkg      = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg = linux-lts linux-lts-headers
+# IgnorePkg = linux-lts linux-lts-headers
 IgnorePkg = brave-bin firefox firefox-nightly google-chrome
-IgnorePkg = android-ndk android-studio-canary code dbeaver docker go
+IgnorePkg = android-ndk android-studio-canary dbeaver docker go
 IgnorePkg = postgresql postgresql-libs
 IgnorePkg = burpsuite ida-free xdman
+IgnorePkg = cuda
 #IgnoreGroup =
 
 #NoUpgrade =
