mpv: scripts: Update playlistmanager

--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -21,6 +21,9 @@ CTRL+LEFT		osd-msg-bar seek -30
 SHIFT+RIGHT 	no-osd seek +2 exact
 SHIFT+LEFT  	no-osd seek -2 exact
 
+# Playlist Manager
+SHIFT+? 		script-message playlistmanager playlist-next-random
+
 # Speed
 } 				add speed +0.50
 { 				add speed -0.50
