mpv: Make ui smaller

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,7 +1,7 @@
 # Tweaks
 autofit=85%
 keep-open=yes
-# fullscreen=yes
+#fullscreen=yes
 cursor-autohide=500
 resume-playback=yes
 save-position-on-quit=yes
@@ -28,15 +28,15 @@ volume-max=250
 osc=yes
 
 # Osd
-osd-font-size=24
+osd-font-size=12
 osd-bar-w=100
-osd-bar-h=1
-osd-bar-align-x= 0
+osd-bar-h=0.2
+osd-bar-align-x=0
 osd-bar-align-y=-1
 osd-color="#FFFFFFFF"
-osd-border-size=1
+osd-border-size=0.5
 osd-border-color="#00000000"
-osd-shadow-offset=1
+osd-shadow-offset=0.5
 osd-shadow-color="#EE000000"
 osd-spacing=0.5
 osd-level=3
@@ -60,7 +60,7 @@ sub-fix-timing=no
 sub-ass-vsfilter-blur-compat=no
 
 # Autoselect sub
-slang=id,en
+slang=id,ind,in,en
 
 # Screenshot
 screenshot-format=png
