mpd: Follow symlink folder

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -16,6 +16,8 @@ metadata_to_use         "artist,album,title,track,date"
 volume_normalization    "yes"
 auto_update             "yes"
 auto_update_depth       "7"
+follow_outside_symlinks "yes"
+follow_inside_symlinks  "yes"
 save_absolute_paths_in_playlists  "yes"
 
 
