root: pacman: Using default dbpath cachedir and logfile

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -10,9 +10,9 @@
 # The following paths are commented out with their default values listed.
 # If you wish to use different paths, uncomment and update the paths.
 #RootDir     = /
-DBPath       = /home/.pacman/lib
-CacheDir     = /home/.pacman/pkg
-LogFile      = /home/.pacman/log/pacman.log
+#DBPath      = /var/lib/pacman/
+#CacheDir    = /var/cache/pacman/pkg/
+#LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
 #HookDir     = /etc/pacman.d/hooks/
 HoldPkg      = pacman glibc
