yt-dlp: Change dafault download format

--- a/yt-dlp/.config/yt-dlp/config
+++ b/yt-dlp/.config/yt-dlp/config
@@ -1,4 +1,4 @@
---format "best[height<=720]"
+--format "bestvideo[height<=1080][ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best"
 --output "%(title)s.%(ext)s"
 
 # --write-sub
