--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -31,6 +31,7 @@ osc=yes
 osd-font-size=12
 osd-bar-w=100
 osd-bar-h=0.2
+osd-bar-border-size=0
 osd-bar-align-x=0
 osd-bar-align-y=-1
 osd-color="#FFFFFFFF"
@@ -42,6 +43,12 @@ osd-spacing=0.5
 osd-level=3
 osd-playing-msg="${filename}"
 osd-duration=3500
+
+# Osd Remove Chapters Mark
+chapters-file="/home/aztecrabbit/.mpv-no-chapters-mark"
+
+# Playlist
+directory-mode=recursive
 
 # Subtitle
 sub-pos=90
@@ -72,9 +79,14 @@ screenshot-template="%f-%wH.%wM.%wS.%wT-#%#00n"
 
 # HW VA
 profile=gpu-hq
-gpu-api=opengl
-hwdec=dxva2-copy
+scale=ewa_lanczossharp
+cscale=ewa_lanczossharp
+interpolation
+tscale=oversample
 
 # YouTube DL
 ytdl=yes
 ytdl-format="bestvideo[height<=?720][fps<=?30][vcodec=?vp9]+bestaudio/best[height<=720]"
+
+# Shaders
+glsl-shaders="~~/shaders/NVScaler.glsl"
