--- a/yt-dlp/.config/yt-dlp/config
+++ b/yt-dlp/.config/yt-dlp/config
@@ -1,9 +1,11 @@
 --format "bestvideo[height<=1080][ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best"
---output "%(title)s.%(ext)s"
+--output "%(title).64s - %(id)s.%(ext)s"
+
+--retries infinite
 
 # --write-sub
 # --write-auto-sub
 # --sub-lang=en,id
 
---external-downloader aria2c
---external-downloader-args "--conf-path=/etc/aria2.conf"
+# --external-downloader aria2c
+# --external-downloader-args "--conf-path=/etc/aria2.conf"
